Fix - create and update exam now accept full questions in request body
